--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: mailer_services
     container_name: mailer_services
     restart: always
-    networks:
-      - main
-      - mailer
+    # networks:
+    #   - main
+    #   - mailer
     build:
       context: ./services/
       dockerfile: ./Dockerfile
@@ -19,9 +19,9 @@ services:
   api:
     container_name: mailer_api
     restart: always
-    networks:
-      - main
-      - mailer
+    # networks:
+    #   - main
+    #   - mailer
     depends_on:
       - mongo
       - kafka
@@ -41,9 +41,9 @@ services:
   mongo:
     container_name: mailer_mongo
     image: mongo:latest
-    networks:
-      - main
-      - mailer
+    # networks:
+    #   - main
+    #   - mailer
     image: mongo:latest
     environment:
       - MONGO_DATA_DIR=/data/db
@@ -58,55 +58,55 @@ services:
   #     - 8080:8080
   #   volumes:
   #     - ./data/dkron.db:/dkron.db
-  zookeeper:
-    container_name: mailer_zookeeper
-    restart: always
-    image: confluentinc/cp-zookeeper:latest
-    networks:
-      - mailer
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-  kafka:
-    container_name: mailer_kafka
-    restart: always
-    volumes:
-      - ./data/kafka:/var/lib/kafka/data
-    # command: kafka-topics --create --zookeeper zookeeper:2181 --replication-factor 1 --partitions 60 --topic tasks
+  # zookeeper:
+  #   container_name: mailer_zookeeper
+  #   restart: always
+  #   image: confluentinc/cp-zookeeper:latest
+  #   # networks:
+  #   #   - mailer
+  #   environment:
+  #     ZOOKEEPER_CLIENT_PORT: 2181
+  #     ZOOKEEPER_TICK_TIME: 2000
+  # kafka:
+  #   container_name: mailer_kafka
+  #   restart: always
+  #   volumes:
+  #     - ./data/kafka:/var/lib/kafka/data
+  #   # command: kafka-topics --create --zookeeper zookeeper:2181 --replication-factor 1 --partitions 60 --topic tasks
 
-    # "`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-
-    # An important note about accessing Kafka from clients on other machines:
-    # -----------------------------------------------------------------------
-    #
-    # The config used here exposes port 9092 for _external_ connections to the broker
-    # i.e. those from _outside_ the docker network. This could be from the host machine
-    # running docker, or maybe further afield if you've got a more complicated setup.
-    # If the latter is true, you will need to change the value 'localhost' in
-    # KAFKA_ADVERTISED_LISTENERS to one that is resolvable to the docker host from those
-    # remote clients
-    #
-    # For connections _internal_ to the docker network, such as from other services
-    # and components, use kafka:29092.
-    #
-    # See https://rmoff.net/2018/08/02/kafka-listeners-explained/ for details
-    # "`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-
-    #
-    image: confluentinc/cp-kafka:latest
-    networks:
-      - mailer
-    depends_on:
-      - zookeeper
-    # ports:
-    #   - 9092:9092
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-networks:
-    mailer:
-        external: false
-    main:
-        external: true
+  #   # "`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-
+  #   # An important note about accessing Kafka from clients on other machines:
+  #   # -----------------------------------------------------------------------
+  #   #
+  #   # The config used here exposes port 9092 for _external_ connections to the broker
+  #   # i.e. those from _outside_ the docker network. This could be from the host machine
+  #   # running docker, or maybe further afield if you've got a more complicated setup.
+  #   # If the latter is true, you will need to change the value 'localhost' in
+  #   # KAFKA_ADVERTISED_LISTENERS to one that is resolvable to the docker host from those
+  #   # remote clients
+  #   #
+  #   # For connections _internal_ to the docker network, such as from other services
+  #   # and components, use kafka:29092.
+  #   #
+  #   # See https://rmoff.net/2018/08/02/kafka-listeners-explained/ for details
+  #   # "`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-'"`-._,-
+  #   #
+  #   image: confluentinc/cp-kafka:latest
+  #   # networks:
+  #   #   - mailer
+  #   depends_on:
+  #     - zookeeper
+  #   # ports:
+  #   #   - 9092:9092
+  #   environment:
+  #     KAFKA_BROKER_ID: 1
+  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+  #     KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+# networks:
+#     mailer:
+#         external: false
+#     main:
+#         external: true
